fixed custom image sizing issue and fixed white space in css

--- a/css/style.css
+++ b/css/style.css
@@ -1,197 +1,201 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
   
-  html,
-  body {
-    font-family: 'Lilita One', sans-serif, serif;
-    /* font-family: 'Nunito', sans-serif, serif; */
-    height: 100%;
-  }
+html,
+body {
+  font-family: 'Lilita One', sans-serif, serif;
+  height: 100%;
+}
   
-  #wrap {
-    min-height: 100%;
-  }
+#wrap {
+  min-height: 100%;
+}
   
-  main {
-    overflow: auto;
-    padding-top: 68px;
-    padding-left: 23px;
-    padding-right: 23px;
-  }
+main {
+  overflow: auto;
+  padding-top: 68px;
+  padding-left: 23px;
+  padding-right: 23px;
+}
   
-  body:before {
-    content: "";
-    height: 100%;
-    float: left;
-    width: 0;
-    margin-top: -32767px;
-  }
+body:before {
+  content: "";
+  height: 100%;
+  float: left;
+  width: 0;
+  margin-top: -32767px;
+}
   
-  *, *::after, *::before {
-    box-sizing: border-box;
-  }
+*, *::after, *::before {
+  box-sizing: border-box;
+}
 
-  .flx-clm-center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.flx-clm-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .title {
-    text-align: center;
-  }
+.title {
+  text-align: center;
+}
 
+.heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 14px;
+  margin-left: -23px;
+  margin-right: -23px;
+  padding: 100px 100px;
+  color: #363636;
+  background: url('../img/funky-lines.png');
+  font-family: 'Lilita One', sans-serif, serif;
+}
+
+.heading h1 {
+  font-size: 2.4rem;
+  line-height: 1.35;
+  letter-spacing: -.08rem;
+}
+
+@media (min-width: 345px) {
+  .heading h1 {
+    font-size: 3.0rem;
+    line-height: 1.3;
+    letter-spacing: -.1rem;
+  }
+}
+  
+@media (min-width: 645px) {
   .heading {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 14px;
-    margin-left: -23px;
-    margin-right: -23px;
-    padding: 100px 100px;
-    color: #363636;
-    background: url('../img/funky-lines.png');
-    font-family: 'Lilita One', sans-serif, serif;
+    flex-direction: row;
+    padding: 125px 55px;
   }
 
   .heading h1 {
+    font-size: 3.6rem;
+    line-height: 1.25;
+    letter-spacing: -.1rem;
+  }
+}
+  
+@media (min-width: 700px) {
+  .heading {
+    padding: 145px 55px;
+  }
+}
+  
+@media (min-width: 950px) {
+  .heading {
+    padding: 170px 55px;
+  }
+
+  .heading h1 {
+    font-size: 4.0rem;
+    line-height: 1.2;
+    letter-spacing: -.1rem;
+  }
+}
+
+.section-page {
+  padding: 77px 55px;
+}
+
+.section-page-contents, .project {
+  border-bottom: solid 2px rgb(223,227,232);
+}
+
+.section-page a {
+  color: #363636;
+}
+
+.section-page p {
+  font-family: 'Spectral', serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.section-page h1 {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
+
+@media (min-width: 345px) {
+  .section-page h1 {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    letter-spacing: -.05rem;
+  }
+}
+
+@media (min-width: 645px) {
+  .section-page h1 {
     font-size: 2.4rem;
     line-height: 1.35;
     letter-spacing: -.08rem;
   }
 
-  @media (min-width: 345px) {
-    .heading h1 {
-      font-size: 3.0rem;
-      line-height: 1.3;
-      letter-spacing: -.1rem;
-    }
-  }
-  
-  @media (min-width: 645px) {
-    .heading {
-      flex-direction: row;
-      padding: 125px 55px;
-    }
-  
-    .heading h1 {
-      font-size: 3.6rem;
-      line-height: 1.25;
-      letter-spacing: -.1rem;
-    }
-  }
-  
-  @media (min-width: 700px) {
-    .heading {
-      padding: 145px 55px;
-    }
-  }
-  
-  @media (min-width: 950px) {
-    .heading {
-      padding: 170px 55px;
-    }
-  
-    .heading h1 {
-      font-size: 4.0rem;
-      line-height: 1.2;
-      letter-spacing: -.1rem;
-    }
-  }
-
-  .section-page {
-    padding: 77px 55px;
-  }
-
-  .section-page-contents, .project {
-    border-bottom: solid 2px rgb(223,227,232);
-  }
-
-  .section-page a {
-    color: #363636;
-  }
-  
   .section-page p {
-    font-family: 'Spectral', serif;
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 23px;
   }
-  
+}
+
+@media (min-width: 950px) {
   .section-page h1 {
-    font-size: 1.5rem;
-    line-height: 1.6;
-    letter-spacing: 0;
+    font-size: 3.0rem;
+    line-height: 1.3;
+    letter-spacing: -.1rem;
   }
-  
-  @media (min-width: 345px) {
-    .section-page h1 {
-      font-size: 1.8rem;
-      line-height: 1.5;
-      letter-spacing: -.05rem;
-    }
-  }
-  
-  @media (min-width: 645px) {
-    .section-page h1 {
-      font-size: 2.4rem;
-      line-height: 1.35;
-      letter-spacing: -.08rem;
-    }
-  
-    .section-page p {
-      font-size: 23px;
-    }
-  }
-  
-  @media (min-width: 950px) {
-    .section-page h1 {
-      font-size: 3.0rem;
-      line-height: 1.3;
-      letter-spacing: -.1rem;
-    }
-  }
+}
 
-  .skills-container ul, .projects-container ul, .contacts-container ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
+.skills-container ul, .projects-container ul, .contacts-container ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 
-  .skill, .project, .contact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 15px;
-  }
+.skill, .project, .contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+}
 
-  .skill img, .contact img {
-    height: 100px;
-    width: 100px;
-  }
+.skill img, .contact img {
+  height: 100px;
+  width: 100px;
+}
 
-  .project label {
-    font-size: 24px;
-  }
+.contact img.custom-img-size {
+  height: 85px;
+  width: 100px;
+}
 
-  .project p, .project a {
-    font-size: 20px;
-  }
+.project label {
+  font-size: 24px;
+}
 
-  .project a {
-    text-decoration: underline;
-  }
+.project p, .project a {
+  font-size: 20px;
+}
 
-  .project img {
-    grid-column: 1 / 4;
-    width: 100%;
-    max-width: 75ch;
-    justify-self: center;
-  }
+.project a {
+  text-decoration: underline;
+}
+
+.project img {
+  grid-column: 1 / 4;
+  width: 100%;
+  max-width: 75ch;
+  justify-self: center;
+}
 
 .navbar {
   background-color: #F4F6F8;
@@ -202,35 +206,35 @@
 }
 
 .navbar-brand .navbar-item {
-    display: flex;
-    justify-content: center;
-    margin-left: 14px;
-    padding: 7px 0;
-  }
+  display: flex;
+  justify-content: center;
+  margin-left: 14px;
+  padding: 7px 0;
+}
 
-  .logo-name {
-    color: #212B36;
-    font-size: 30px;
-    font-family: 'Lilita One', cursive;
-  }
+.logo-name {
+  color: #212B36;
+  font-size: 30px;
+  font-family: 'Lilita One', cursive;
+}
 
-  .logo-img {
-    height: auto;
-    width: 55px;
-    max-width: 100%;
-  }
+.logo-img {
+  height: auto;
+  width: 55px;
+  max-width: 100%;
+}
 
-  .logo {
-      height: 50px;
-      width: 200px;
-  }
+.logo {
+  height: 50px;
+  width: 200px;
+}
 
-  .footer {
-    color: #FFF;
-    background-color: #212B36;
-    padding: 45px 35px;
-    text-align: center;
-  }
+.footer {
+  color: #FFF;
+  background-color: #212B36;
+  padding: 45px 35px;
+  text-align: center;
+}
 
 .footer-contents {
   display: flex;
